--- a/checkpoint2/templates/layout.html
+++ b/checkpoint2/templates/layout.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<!-- Compiled and minified CSS -->
-	<link rel="stylesheet" href="https://cdnjs.cloudjflare.com/ajax/libs/materialize/0.96.0/css/materialize.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.0/css/materialize.min.css">
 	<link rel="stylesheet" href="{{url_for('static',filename='css/materialize.min.css')}}">
 	
 	<!-- Compiled and minified JavaScript -->
