--- a/checkpoint2/templates/about.html
+++ b/checkpoint2/templates/about.html
@@ -1,17 +1,16 @@
-{% extends "layout.html"%}
+{% extends "layout.html" %}
 
-{% block content%}
-
+{% block content %}
 <div class="row">
 	<div class="col s12 m6">
 		<div class="card blue-grey darken-1">
 			<div class="card-content white-text">
-				<span class="card-title">about</span>
+				<span class="card-title">Card Title</span>
 				<p>I am a very simple card. I am good at containing small bits of information.
 				I am convenient because I require little markup to use effectively.</p>
 			</div>
 			<div class="card-action">
-				<a href="{{ url_for( 'about' )}}">This is a link</a>
+				<a href="#">This is a link</a>
 			</div>
 		</div>
 	</div>
