--- a/checkpoint2/templates/layout.html
+++ b/checkpoint2/templates/layout.html
@@ -7,7 +7,9 @@
 	<link rel="stylesheet" href="{{url_for('static',filename='css/materialize.min.css')}}">
 	
 	<!-- Compiled and minified JavaScript -->
+	<script src = "https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.0/js/materialize.min.js"></script>
+	<script src="{{url_for('static',filename='js/materialize.min.js')}}"></script>
 	
 	<title>home page</title>
 </head>
