--- a/checkpoint2/templates/signup.html
+++ b/checkpoint2/templates/signup.html
@@ -1,36 +1,37 @@
-{% extends "layout.html" %}
+{% extends "layout.html" %} 
+
 {% block content %}
 <div class="row">
-	<div class="col s12 m5">
-		<div class="card-panel blue">
-			<span class="white-text">
+    <div class="col s12 m5">
+        <div class="card-panel ">
+            <span class="teal-text">
 <form action="/signup" method="POST">
 	{{form.hidden_tag()}}
 	
 	<div class="form-group">
-		{{ form.first_name.Label }}
-		{% if form.first_name.errors %}
-			{% for error in form.first_name.errors %}
+		{{ form.firstname.label }}
+		{% if form.firstname.errors %}
+			{% for error in form.firstname.errors %}
 				<p class="error-message">{{ error }}</p>
 
 
 			{% endfor %}
 		{% endif %}
-		{{ form.first_name }}
+		{{ form.firstname }}
 	</div>
 	<div class="form-group">
-		{{ form.last_name.Label }}
-		{% if form.last_name.errors %}
-			{% for error in form.last_name.errors %}
+		{{ form.lastname.label }}
+		{% if form.lastname.errors %}
+			{% for error in form.lastname.errors %}
 				<p class="error-message">{{ error }}</p>
 
 
 			{% endfor %}
 		{% endif %}
-		{{form.last_name}}
+		{{form.lastname}}
 	</div>
 	<div class="form-group">
-		{{ form.email.Label }}
+		{{ form.email.label }}
 		{% if form.email.errors %}
 			{% for error in form.email.errors %}
 				<p class="error-message">{{ error }}</p>
@@ -40,13 +41,26 @@
 		{% endif %}
 		{{form.email}}
 	</div>
+
+
+	<div class="form-group">
+		{{ form.password.label }}
+		{% if form.password.errors %}
+			{% for error in form.password.errors %}
+				<p class="error-message">{{ error }}</p>
+
+
+			{% endfor %}
+		{% endif %}
+		{{form.password}}
+	</div>
 	{{ form.submit(class="btn" )}}
 	
 	
 		
 </form>
 			</span>
-		</div>
-	</div>
+        </div>
+    </div>
 </div>
 {% endblock %}
