--- a/checkpoint2/templates/index.html
+++ b/checkpoint2/templates/index.html
@@ -6,9 +6,8 @@
 	<div class="col s12 m6">
 		<div class="card blue-grey darken-1">
 			<div class="card-content white-text">
-				<span class="card-title">about</span>
-				<p>I am a very simple card. I am good at containing small bits of information.
-				I am convenient because I require little markup to use effectively.</p>
+				<span class="card-title">Home</span>
+				<p>  {{ msg | default:"Welcome Home"}} </p>
 			</div>
 			<div class="card-action">
 				<a href="{{ url_for( 'about' )}}">This is a link</a>
